Moved the extraction test to the main package for ease of use.
Also fixed the gradle configuration again.

--- a/RuleBasedModuleExtraction/.project
+++ b/RuleBasedModuleExtraction/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>RuleBasedModuleExtraction</name>
+	<name>RuleBasedModuleExtraction-old</name>
 	<comment>Project RuleBasedModuleExtraction created by Buildship.</comment>
 	<projects>
 	</projects>
@@ -10,13 +10,19 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1444645547772</id>
+			<id>0</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
@@ -25,7 +31,7 @@
 			</matcher>
 		</filter>
 		<filter>
-			<id>1444645547794</id>
+			<id>0</id>
 			<name></name>
 			<type>26</type>
 			<matcher>
