--- a/RuleBasedModuleExtraction/.gitignore
+++ b/RuleBasedModuleExtraction/.gitignore
@@ -1,11 +1,9 @@
 /bin/
 /.gradle/
-/.settings/
-/build/
-.classpath
-/catalog-v001.xml
-/EL-GALEN.owl
-.project
-.gradle
-.classpath
-.settings
+/gradle/
+/target/
+catalog-v001.xml
+EL-GALEN.owl
+onto.owl
+out.csv
+pom-default.xml
