--- a/RuleBasedModuleExtraction/.settings/gradle.prefs
+++ b/RuleBasedModuleExtraction/.settings/gradle.prefs
@@ -1,11 +1,11 @@
 {
   "1.0": {
     "project_path": ":",
-    "project_dir": "C:\\Users\\spellmaker\\git\\rbme\\RuleBasedModuleExtraction",
-    "connection_project_dir": "C:\\Users\\spellmaker\\git\\rbme\\RuleBasedModuleExtraction",
+    "project_dir": "C:\\Users\\spellmaker\\git\\RuleBasedModuleExtraction2\\RuleBasedModuleExtraction",
+    "connection_project_dir": "C:\\Users\\spellmaker\\git\\RuleBasedModuleExtraction2\\RuleBasedModuleExtraction",
     "connection_gradle_user_home": null,
     "connection_gradle_distribution": "GRADLE_DISTRIBUTION(WRAPPER)",
-    "connection_java_home": "C:\\Program Files\\Java\\jdk1.8.0_45",
+    "connection_java_home": null,
     "connection_jvm_arguments": "",
     "connection_arguments": ""
   }
