--- a/RuleBasedModuleExtraction/.classpath
+++ b/RuleBasedModuleExtraction/.classpath
@@ -16,5 +16,76 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/owlapi/target/pellet-owlapi-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/core/target/pellet-core-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/explanation/target/pellet-explanation-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/jena/target/pellet-jena-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/modularity/target/pellet-modularity-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/pellint/target/pellet-pellint-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/query/target/pellet-query-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/antlr-2.7.7.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/antlr-runtime-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/aterm-java-1.8.2-p1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/commons-codec-1.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/commons-csv-1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/commons-lang3-3.3.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/guava-18.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/guice-4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/guice-assistedinject-4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/guice-multibindings-4.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/httpclient-4.2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/httpclient-cache-4.2.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/httpcore-4.2.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jackson-annotations-2.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jackson-core-2.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jackson-databind-2.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/javax.inject-1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jena-arq-2.13.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jena-core-2.13.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jena-iri-1.1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jgrapht-jdk1.5-0.7.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jjtraveler-0.6.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jsonld-java-0.5.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jsonld-java-sesame-0.5.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/jsr305-2.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/libthrift-0.9.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/org.apache.commons.io-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/owlapi-distribution-4.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-cli-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-core-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-explanation-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-jena-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-modularity-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-owlapi-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-pellint-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/pellet-query-2.4.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/semargl-core-0.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/semargl-rdf-0.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/semargl-rdfa-0.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/semargl-sesame-0.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-model-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-api-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-binary-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-datatypes-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-languages-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-n3-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-nquads-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-ntriples-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-rdfjson-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-rdfxml-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-trig-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-trix-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-rio-turtle-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/sesame-util-2.7.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/shared-objects-1.4.9-p1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/slf4j-simple-1.7.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/stringtemplate-3.2.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/trove4j-3.0.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/xercesImpl-2.11.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/xml-apis-1.4.01.jar"/>
+	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/xz-1.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
