--- a/RuleBasedModuleExtraction/build.gradle
+++ b/RuleBasedModuleExtraction/build.gradle
@@ -30,8 +30,12 @@ repositories {
 
 jar{
 	manifest{
-		attributes 'Main-Class': 'de.spellmaker.rbme.Evaluation'
+		attributes 'Main-Class': 'de.spellmaker.rbme.mains.TestModuleSizes'
 	}
+}
+
+shadowJar {
+	baseName = 'moduleSizeTest'
 }
 
 // In this section you declare the dependencies for your production and test code
