--- a/RuleBasedModuleExtraction/.classpath
+++ b/RuleBasedModuleExtraction/.classpath
@@ -87,5 +87,9 @@
 	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/xercesImpl-2.11.0.jar"/>
 	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/xml-apis-1.4.01.jar"/>
 	<classpathentry kind="lib" path="C:/Users/spellmaker/git/pellet/cli/target/pelletcli/lib/xz-1.5.jar"/>
+	<classpathentry kind="lib" path="lib/jcel-core-0.24.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jcel-coreontology-0.24.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jcel-ontology-0.24.0-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="lib/jcel-owlapi-0.24.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
